update translation of books/handbook to Russian
Reviewed by: mizhka
Differential Revision: https://reviews.freebsd.org/D52052

--- a/documentation/content/ru/books/handbook/_index.adoc
+++ b/documentation/content/ru/books/handbook/_index.adoc
@@ -1,21 +1,22 @@
 ---
-title: Руководство FreeBSD
-authors:
-  - author: Проект Документации FreeBSD
-copyright: 1995-2025 The FreeBSD Documentation Project
-description: A constantly evolving, comprehensive resource for FreeBSD users
-trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "google", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"] 
-tags: ["FreeBSD Handbook", "Handbook"]
-next: books/handbook/preface
 add_single_page_link: true
-showBookMenu: true
-weight: 0
-params:
-  path: "/books/handbook/"
+authors:
+  - 
+    author: 'The FreeBSD Documentation Project'
 bookOrder: 1
+copyright: '1995-2025 The FreeBSD Documentation Project'
+description: 'Постоянно развивающийся и всеобъемлющий ресурс для пользователей FreeBSD'
+next: books/handbook/preface
+params:
+  path: /books/handbook/
+showBookMenu: true
+tags: ["FreeBSD Handbook", "Handbook"]
+title: 'Руководство FreeBSD'
+trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "google", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"]
+weight: 0
 ---
 
-= FreeBSD Handbook
+= Руководство FreeBSD
 :doctype: book
 :toc: macro
 :toclevels: 1
