--- a/documentation/content/ru/books/handbook/book.adoc
+++ b/documentation/content/ru/books/handbook/book.adoc
@@ -1,8 +1,12 @@
 ---
-title: Руководство FreeBSD
+add_split_page_link: true
 authors:
-  - author: Проект Документации FreeBSD
-copyright: 1995-2025 The FreeBSD Documentation Project
+  - 
+    author: 'The FreeBSD Documentation Project'
+copyright: '1995-2025 The FreeBSD Documentation Project'
+description: 'Постоянно развивающийся и всеобъемлющий ресурс для пользователей FreeBSD'
+tags: ["FreeBSD Handbook", "Handbook"]
+title: 'Руководство FreeBSD'
 trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "google", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"]
 ---
 
@@ -67,6 +71,10 @@ include::{chapters-path}ports/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}x11/_index.adoc[leveloffset=+1]
 
+include::{chapters-path}wayland/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}network/_index.adoc[leveloffset=+1]
+
 // Section two
 include::{chapters-path}partii.adoc[]
 
@@ -80,6 +88,8 @@ include::{chapters-path}printing/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}linuxemu/_index.adoc[leveloffset=+1]
 
+include::{chapters-path}wine/_index.adoc[leveloffset=+1]
+
 // Section three
 include::{chapters-path}partiii.adoc[]
 
@@ -89,6 +99,8 @@ include::{chapters-path}boot/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}security/_index.adoc[leveloffset=+1]
 
+include::{chapters-path}jails/_index.adoc[leveloffset=+1]
+
 include::{chapters-path}mac/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}audit/_index.adoc[leveloffset=+1]
@@ -97,11 +109,19 @@ include::{chapters-path}disks/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}geom/_index.adoc[leveloffset=+1]
 
+include::{chapters-path}zfs/_index.adoc[leveloffset=+1]
+
 include::{chapters-path}filesystems/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}virtualization/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}l10n/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}cutting-edge/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}dtrace/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}usb-device-mode/_index.adoc[leveloffset=+1]
 
 // Section four
 include::{chapters-path}partiv.adoc[]
@@ -130,5 +150,9 @@ include::{chapters-path}bibliography/_index.adoc[leveloffset=+1]
 include::{chapters-path}eresources/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}pgpkeys/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}glossary.adoc[leveloffset=+1]
+
+include::{chapters-path}colophon.adoc[leveloffset=+1]
 
 :sectnums:
