--- a/documentation/content/ru/books/handbook/parti.adoc
+++ b/documentation/content/ru/books/handbook/parti.adoc
@@ -1,22 +1,23 @@
 ---
-title: Часть I. В начале
-prev: books/handbook/preface
 next: books/handbook/introduction
-showBookMenu: true
-weight: 2
 params:
-  path: "/books/handbook/parti/"
+  path: /books/handbook/parti/
+prev: books/handbook/preface
+showBookMenu: true
+title: 'В начале'
+weight: 2
 ---
 
 [[getting-started]]
 = В начале
 
-Эта часть Руководства Пользователя FreeBSD предназначена для пользователей и администраторов - новичков в FreeBSD. Эти главы:
+Эта часть руководства предназначена для пользователей и администраторов, которые только начинают работать с FreeBSD. В следующих главах:
 
-* Введут вас в FreeBSD.
-* Проведут вас по процессу установки FreeBSD.
-* Обучат вас некоторым основам UNIX(R).
-* Покажут вам как устанавливать программные пакеты не входящие в стандартную поставку FreeBSD.
-* Введут вас в X Window, оконную систему для UNIX(R), и опишут как настроить графическое окружение и сделать вашу работу более продуктивной.
+* Введение в FreeBSD.
+* Пошаговое руководство по установке системы.
+* Основы работы с UNIX(R) для начинающих.
+* Установка стороннего программного обеспечения из коллекции портов.
+* Знакомство с системой X Window, настройка графического окружения для повышения эффективности работы.
+* Введение в Wayland, новый сервер экрана для UNIX(R).
 
-Мы попытались сократить множество ссылок в тексте до минимума для того, чтоб вы могли прочитать этот раздел Руководства с начала до конца с минимумом перелистываний страниц.
+Количество ссылок в тексте на следующие главы сведено к минимуму, чтобы данный раздел можно было последовательно прочитать от начала до конца без необходимости постоянного перелистывания страниц.
