--- a/documentation/content/ru/books/handbook/partii.adoc
+++ b/documentation/content/ru/books/handbook/partii.adoc
@@ -1,22 +1,22 @@
 ---
-title: Часть II. Общие задачи
-prev: books/handbook/x11
 next: books/handbook/desktop
-showBookMenu: true
-weight: 9
 params:
-  path: "/books/handbook/partii/"
+  path: /books/handbook/partii/
+prev: books/handbook/network
+showBookMenu: true
+title: 'Часть II. Стандартные задачи'
+weight: 10
 ---
 
 [[common-tasks]]
-= Общие задачи
+= Стандартные задачи
 
-Теперь, когда основы были пройдены, в данной части Руководства FreeBSD будут обсуждаться некоторые часто используемые возможности FreeBSD. В этих главах:
+Теперь, когда основы рассмотрены, в этой части книги обсуждаются некоторые часто используемые возможности FreeBSD. Эти главы:
 
-* Введение в популярные и полезные графические приложения: браузеры, бизнес приложения, программы просмотра документов и т.д.
-* Представлены множество мультимедийных программ, доступных в FreeBSD.
-* Описан процесс создания собственного ядра FreeBSD для включения дополнительных функций системы.
-* Система печати разобрана в деталях, как для непосредственно подключенных принтеров, так и для принтеров, подключенных через сеть.
-* Показано, как запускать приложения Linux в системе FreeBSD.
+* Представляют популярные и полезные настольные приложения: браузеры, инструменты для работы, программы для просмотра документов и многое другое.
+* Знакомят с несколькими мультимедийными инструментами, доступными для FreeBSD.
+* Объясняют процесс сборки ядра FreeBSD со своими настройками для включения дополнительной функциональности.
+* Подробно описывают систему печати, как для настольных, так и для сетевых принтеров.
+* Показывают, как запускать Linux-приложения в системе FreeBSD.
 
-Перед прочтением некоторых из этих глав необходимо ознакомиться с предварительной информацией, что указано в кратком обзоре в начале каждой главы.
+Некоторые из этих глав рекомендуют предварительное ознакомление с другими материалами, что указано в аннотации в начале каждой главы.
