--- a/documentation/content/ru/books/handbook/partiii.adoc
+++ b/documentation/content/ru/books/handbook/partiii.adoc
@@ -1,16 +1,16 @@
 ---
-title: Часть III. Системное администрирование
-prev: books/handbook/linuxemu
 next: books/handbook/config
-showBookMenu: true
-weight: 15
 params:
-  path: "/books/handbook/partiii/"
+  path: /books/handbook/partiii/
+prev: books/handbook/linuxemu
+showBookMenu: true
+title: 'Часть III. Администрирование системы'
+weight: 17
 ---
 
 [[system-administration]]
 = Системное администрирование
 
-Оставшиеся главы Руководства охватывают все аспекты администрирования FreeBSD системы. Каждая глава начинается с описания того, что вы сможете изучить в результате прочтения этой главы.
+Оставшиеся главы охватывают все аспекты администрирования системы FreeBSD. Каждая глава начинается с описания того, что будет изучено в результате прочтения, а также подробно указывает, что читатель должен знать перед изучением материала.
 
-Эти главы спланированы так, что вы можете прочитать их когда вам нужно узнать какую-либо информацию. Вам не нужно читать их в определенном порядке, и не нужно прочитать их все перед тем, как начать пользоваться FreeBSD.
+Эти главы предназначены для чтения по мере необходимости. Их не обязательно читать в каком-то определённом порядке, а также не требуется прочесть все перед началом работы с FreeBSD.
