--- a/documentation/content/ru/books/handbook/partiv.adoc
+++ b/documentation/content/ru/books/handbook/partiv.adoc
@@ -1,23 +1,23 @@
 ---
-title: Часть IV. Сетевые коммуникации
-prev: books/handbook/cutting-edge
 next: books/handbook/serialcomms
-showBookMenu: true
-weight: 26
 params:
-  path: "/books/handbook/partiv/"
+  path: /books/handbook/partiv/
+prev: books/handbook/usb-device-mode
+showBookMenu: true
+title: 'Часть IV. Сетевое взаимодействие'
+weight: 33
 ---
 
 [[network-communication]]
 = Сетевые коммуникации
 
-FreeBSD это одна из наиболее широко используемых в высокопроизводительных сетевых серверах операционных систем. Главы этой части книги охватывают:
+FreeBSD является одной из наиболее широко используемых операционных систем для высокопроизводительных сетевых серверов. Главы в этом разделе охватывают:
 
-* Последовательные соединения
-* PPP и PPP через Ethernet
-* Электронную почту
-* Запуск сетевых серверов
-* Брандмауэры
-* Другую сетевую тематику повышенной сложности
+* Передача данных по последовательному порту
+* `PPP` и `PPP` через Ethernet
+* Электронная почта
+* Работа с сетевыми серверами
+* Межсетевые экраны
+* Другие темы сложной сетевой настройки
 
-Эти главы предназначены для получения дополнительной информации. Нет необходимости читать их в определенной последовательности, или читать их все перед тем, как начать использовать FreeBSD в сети.
+Эти главы предназначены для ознакомления по мере необходимости. Их не обязательно читать в определённом порядке, а также нет необходимости прочитывать все из них перед использованием FreeBSD в сетевом окружении.
