--- a/documentation/content/ru/books/handbook/partv.adoc
+++ b/documentation/content/ru/books/handbook/partv.adoc
@@ -1,12 +1,12 @@
 ---
-title: Часть V. Приложения
-prev: books/handbook/advanced-networking
 next: books/handbook/mirrors
-showBookMenu: true
-weight: 33
 params:
-  path: "/books/handbook/partv/"
+  path: /books/handbook/partv/
+prev: books/handbook/advanced-networking
+showBookMenu: true
+title: 'Часть V. Приложения'
+weight: 40
 ---
 
 [[appendices]]
-= Приложения
+= Приложения 
