--- a/documentation/content/ru/books/handbook/introduction.adoc
+++ b/documentation/content/ru/books/handbook/introduction.adoc
@@ -1,12 +1,6 @@
 [.abstract-title]
 Аннотация
 
-Добро пожаловать в FreeBSD! Это руководство охватывает установку и повседневное использование FreeBSD {rel142-current}-RELEASE и {rel134-current}-RELEASE.
-Эта книга является результатом совместной работы многих людей.
-Некоторые разделы могут быть устаревшими.
-Те, кто хочет помочь обновить и расширить этот документ, могут отправить электронное письмо на {freebsd-doc}.
+Добро пожаловать в FreeBSD! Данное руководство охватывает установку и повседневное использование FreeBSD {rel143-current}-RELEASE и {rel135-current}-RELEASE. Эта книга стала результатом постоянной работы многих участников. Некоторые разделы могут быть устаревшими. Все желающие помочь в обновлении и расширении данного документа могут написать на электронную почту {freebsd-doc}.
 
-Последняя версия этой книги доступна на https://www.FreeBSD.org/[веб-сайте FreeBSD].
-Предыдущие версии можно получить по адресу https://docs.FreeBSD.org/doc/[https://docs.FreeBSD.org/doc/].
-Книгу можно скачать в различных форматах и с различными опциями сжатия с https://download.freebsd.org/doc/[сервера загрузки FreeBSD] или с одного из многочисленных link:./mirrors#mirrors[зеркальных сайтов].
-Поиск можно выполнить по этому руководству и другим документам на link:https://www.FreeBSD.org/search/[странице поиска].
+Последняя версия данного руководства доступна на https://www.FreeBSD.org/[веб-сайте FreeBSD]. Предыдущие версии можно получить по адресу https://docs.FreeBSD.org/doc/[https://docs.FreeBSD.org/doc/]. Книгу можно загрузить в различных форматах и вариантах сжатия с https://download.freebsd.org/doc/[сервера загрузок FreeBSD] или одного из link:./mirrors#mirrors[многочисленных зеркал]. Поиск по данному руководству и другим документам доступен на https://www.FreeBSD.org/search/[странице поиска].
