--- a/documentation/content/ru/books/handbook/pgpkeys/_index.adoc
+++ b/documentation/content/ru/books/handbook/pgpkeys/_index.adoc
@@ -1,17 +1,19 @@
 ---
-title: Приложение D. PGP ключи
-part: Часть V. Приложения
-prev: books/handbook/eresources
-next: books/handbook/freebsd-glossary
-showBookMenu: true
-weight: 37
+description: 'Здесь представлен список OpenPGP-ключей должностных лиц FreeBSD'
+next: books/handbook/glossary
 params:
-  path: "/books/handbook/pgpkeys/"
+  path: /books/handbook/pgpkeys/
+part: 'Часть V. Приложения'
+prev: books/handbook/eresources
+showBookMenu: true
+tags: ["OpenGPG", "keys", "officers"]
+title: 'Приложение D. Ключи OpenPGP'
+weight: 44
 ---
 
 [appendix]
 [[pgpkeys]]
-= PGP ключи
+= Ключи OpenPGP
 :doctype: book
 :toc: macro
 :toclevels: 1
@@ -52,7 +54,7 @@ toc::[]
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
-В случае, если вам нужно проверить подпись или послать зашифрованное электронное письмо одному из офицеров или разработчиков, то для вашего удобства здесь представлено некоторое количество ключей. Полный список ключей пользователей `FreeBSD.org` доступен для скачивания с link:https://docs.FreeBSD.org/pgpkeys/pgpkeys.txt[pgpkeyring.txt].
+Здесь представлены открытые ключи OpenPGP должностных лиц `FreeBSD.org`. Эти ключи могут быть использованы для проверки подписи или отправки зашифрованной электронной почты одному из должностных лиц. Полный список OpenPGP ключей FreeBSD доступен в статье extref:{pgpkeys}[PGP ключи]. Полный набор ключей можно загрузить по ссылке link:https://docs.FreeBSD.org/pgpkeys/pgpkeys.txt[pgpkeyring.txt].
 
 [[pgpkeys-officers]]
 == Офицеры
